[gd_scene load_steps=11 format=2]

[ext_resource path="res://assets/gui/patches/diag-box-patch.png" type="Texture" id=1]
[ext_resource path="res://materials/ui/theme.tres" type="Theme" id=2]
[ext_resource path="res://scripts/gui/DiagBox.gd" type="Script" id=3]
[ext_resource path="res://assets/gui/patches/item-patch.png" type="Texture" id=4]
[ext_resource path="res://assets/gui/patches/box-patch.png" type="Texture" id=5]
[ext_resource path="res://materials/fonts/diagbox-normal.tres" type="DynamicFont" id=6]
[ext_resource path="res://scenes/gui/Selector.tscn" type="PackedScene" id=7]
[ext_resource path="res://sounds/fx/gui/speak-blip.ogg" type="AudioStream" id=10]
[ext_resource path="res://sounds/fx/gui/next.ogg" type="AudioStream" id=11]

[sub_resource type="Animation" id=6]
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("ColorRect:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -180 ), Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ColorRect2:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 596 ), Vector2( 0, 416 ) ]
}

[node name="DiagBox" type="Node"]
script = ExtResource( 3 )
noSpeaker = ExtResource( 4 )
normal = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -180.0
margin_right = 6.10352e-05
margin_bottom = -596.0
mouse_filter = 2
color = Color( 0.109804, 0.0784314, 0.121569, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect2" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 596.0
margin_right = 6.10352e-05
margin_bottom = 180.0
mouse_filter = 2
color = Color( 0.109804, 0.0784314, 0.121569, 1 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="GPanel" type="NinePatchRect" parent="ColorRect2"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 338.0
margin_top = -224.0
margin_right = -294.0
margin_bottom = -252.0
rect_scale = Vector2( 4, 4 )
texture = ExtResource( 5 )
region_rect = Rect2( 0, 0, 24, 24 )
patch_margin_left = 8
patch_margin_top = 8
patch_margin_right = 9
patch_margin_bottom = 8

[node name="Choices" type="VBoxContainer" parent="ColorRect2/GPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 19.0
margin_top = 5.0
margin_right = 56.0
margin_bottom = 27.0
rect_scale = Vector2( 0.5, 0.5 )
theme = ExtResource( 2 )
custom_constants/separation = -2

[node name="Cursor" parent="ColorRect2/GPanel" instance=ExtResource( 7 )]

[node name="DiagBox" type="NinePatchRect" parent="ColorRect2"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 70.0
margin_top = -80.0
margin_right = -506.0
margin_bottom = -114.0
rect_scale = Vector2( 4, 4 )
texture = ExtResource( 1 )
region_rect = Rect2( 0, 0, 24, 24 )
patch_margin_left = 8
patch_margin_right = 8

[node name="LabelBGSHD" type="ColorRect" parent="ColorRect2/DiagBox"]
margin_left = 8.74004
margin_top = -7.02773
margin_right = 49.74
margin_bottom = 1.97227
color = Color( 0.109804, 0.0784314, 0.121569, 1 )

[node name="LabelBG" type="ColorRect" parent="ColorRect2/DiagBox/LabelBGSHD"]
margin_left = 1.0
margin_top = 1.0
margin_right = 41.0
margin_bottom = 9.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="ColorRect2/DiagBox/LabelBGSHD/LabelBG"]
margin_right = 81.0
margin_bottom = 16.0
rect_scale = Vector2( 0.5, 0.5 )
rect_clip_content = true
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 6 )
text = "Lorem"
align = 1
clip_text = true
max_lines_visible = 1

[node name="RichTextLabel" type="Label" parent="ColorRect2/DiagBox"]
margin_left = 8.0
margin_top = 2.0
margin_right = 264.0
margin_bottom = 55.0
rect_scale = Vector2( 0.5, 0.5 )
custom_fonts/font = ExtResource( 6 )
text = "lorem ipsum dolor sit amet"
autowrap = true

[node name="next" type="ColorRect" parent="ColorRect2/DiagBox"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 130.0
margin_top = 22.0
margin_right = -10.0001
margin_bottom = -4.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/fade-in = SubResource( 6 )

[node name="next_char" type="Timer" parent="."]

[node name="Speak" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )

[node name="Next" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 11 )
